Added code that will show the user a technician, their info, and what operating system that they specialize in working on. Also tweaked "secrets.json " to define a database connection string.

--- a/COMP003B.Assignment6/COMP003B.Assignment6.csproj
+++ b/COMP003B.Assignment6/COMP003B.Assignment6.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>6eba0821-3821-4f96-91bb-90d1086c744e</UserSecretsId>
   </PropertyGroup>
 
 </Project>
